--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
 
-boddy {
+body {
+    margin: 0;
     padding: 2rem;
+    font-family: Arial, Helvetica, sans-serif; // Fonte dos textes
+    color: #404C51; //COR DE FONTES
 }
+
+label {
+    font-weight: bold;
+  }
+
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px;
+      margin: 0 auto;
+    }
+  }
+
+  .col-valor-header {
+    width: 120px;
+  }
+  
+  .col-valor-content {
+    text-align: right;
+  }
+  
+  .col-data-header {
+    width: 120px;
+  }
+  
+  .col-data-content {
+    text-align: center;
+  }
+
+  .col-acoes {
+    width: 115px;
+    text-align: center !important;
+  }
+  
+  .col-acoes .p-button {
+    margin: 1px;
+  }
