--- a/src/app/navegacao/navegacao.component.html
+++ b/src/app/navegacao/navegacao.component.html
@@ -3,11 +3,26 @@
     <div class="container">
       <div class="p-grid">
         <div class="p-col-12">
-          <a href="javascript:;" class="navbar-toggle"><i class="pi pi-bars"></i></a>
+          <a href="javascript:;"  (click)="exibindoMenu = !exibindoMenu"
+          class="navbar-toggle"><i class="pi pi-bars"></i></a>
         </div>
   
       </div>
   
     </div>
+
+    <ul class="navbar-menu" [hidden]="!exibindoMenu">
+        <li class="navbar-usuario">Hugo França</li>
+        <li class="navbar-menuitem" ><a href="#">Deshboard</a></li>
+        <li class="navbar-menuitem"><a href="#">Pendências</a></li>
+        <li class="navbar-menuitem"><a href="#">Vendas</a></li>
+         <li class="navbar-menuitem"><a href="#">Clientes</a></li>
+        <li class="navbar-menuitem"><a href="#">Administração</a></li>
+        <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
+        <li class="navbar-menuitem"><a href="#">Relatórios</a></li>
+        <li class="navbar-menuitem"><a href="#">Configurações</a></li>
+        <li class="navbar-menuitem"><a href="#">Suporte</a></li>
+        <li class="navbar-menuitem"><a href="#">Sair</a></li>
+      </ul>
   
   </nav>
