--- a/src/app/lancamentos/lancamentos.component.html
+++ b/src/app/lancamentos/lancamentos.component.html
@@ -21,7 +21,7 @@
 
     </div>
 
-    <div class="p-col-12">
+    <div class="p-col-2">
         <button pButton type="submit" label="Pesquisar"></button>
       </div>
     
@@ -33,7 +33,7 @@
 
 <div class="p-grid">
     <div class="p-col-12">
-        <p-card>
+        
         <p-table  [value]="lancamentos" [paginator]="true" [rows]="2">
             <ng-template pTemplate="header">
                 <tr>
@@ -58,10 +58,17 @@
                     </td>
                 </tr>
             </ng-template>
+
+            <ng-template pTemplate="emptymessage">
+                <tr>
+                  <td colspan="5">
+                 <h2>Nenhuma pendência encontrada</h2>   
+                  </td>
+                </tr>
+              </ng-template>
         </p-table>
 
-    </p-card>
-
+  
 
     </div>
 
