--- a/src/app/navegacao/navegacao.component.html
+++ b/src/app/navegacao/navegacao.component.html
@@ -14,14 +14,15 @@
     <ul class="navbar-menu" [hidden]="!exibindoMenu">
         <li class="navbar-usuario">Hugo França</li>
         <li class="navbar-menuitem" ><a href="#">Deshboard</a></li>
-        <li class="navbar-menuitem"><a href="#">Pendências</a></li>
-        <li class="navbar-menuitem"><a href="#">Vendas</a></li>
-         <li class="navbar-menuitem"><a href="#">Clientes</a></li>
+        <!-- Pendências = lancamentos -->
+        <li class="navbar-menuitem"><a routerLink="lancamentos">Pendências</a></li>
+        <li class="navbar-menuitem"><a routerLink="pessoas">Pessoas</a></li>
+        <!-- <li class="navbar-menuitem"><a href="#">Vendas</a></li>
         <li class="navbar-menuitem"><a href="#">Administração</a></li>
         <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
         <li class="navbar-menuitem"><a href="#">Relatórios</a></li>
         <li class="navbar-menuitem"><a href="#">Configurações</a></li>
-        <li class="navbar-menuitem"><a href="#">Suporte</a></li>
+        <li class="navbar-menuitem"><a href="#">Suporte</a></li> -->
         <li class="navbar-menuitem"><a href="#">Sair</a></li>
       </ul>
   
