--- a/src/app/navegacao/navegacao.component.scss
+++ b/src/app/navegacao/navegacao.component.scss
@@ -12,8 +12,8 @@
     position: fixed;
     top: 0; // colado em cima 
     bottom: 0; // colado em baixo
-    right: 0;
-    width: 250px;
+    left: 0;
+    width: 200px;
     margin: 0;
     padding: 0;
     z-index: 9998;
