Iniciando visual do componente de cadastro de pendencias

--- a/src/app/lancamentos/lancamentos.component.html
+++ b/src/app/lancamentos/lancamentos.component.html
@@ -1,7 +1,9 @@
 
  
 <div class="container">
+    
 <div class="p-grid">
+   
     <div class="p-col-12">
         <H1>Controle de Pendências</H1>
     </div>
@@ -21,9 +23,14 @@
 
     </div>
 
-    <div class="p-col-2">
-        <button pButton type="submit" label="Pesquisar"></button>
-      </div>
+    <div class="p-col-12">
+        <button pButton type="submit" label="PESQUISAR"></button>
+  
+        <button pButton type="submit" label="NOVA PENDÊNCIA" class="p-button-info"></button>
+    </div>
+        
+     
+  
     
 </div>
 <br>
@@ -72,10 +79,7 @@
 
     </div>
 
-    <div class="p-col-12">
-        <button pButton type="submit" label="Cadastrar"></button>
-      </div>
-  
+ 
 </div>
 
 
