--- a/src/app/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -1,1 +1,50 @@
-<p>lancamentos-cadastro works!</p>
+<div class="container">
+    <div class="p-grid">
+        <div class="p-col-12">
+            <H1>Cadastro de Pendências</H1>
+        </div>
+
+        <div class="p-grid">
+
+            <div class="p-col-12">
+                <p-selectButton [options]="tipos" #tipo></p-selectButton>
+            </div>
+
+            <div class="p-col-6 p-md-3 p-fluid">
+                <label>Vencimento</label>
+                <p-calendar dateFormat="dd/mm/yy" [inline]="false" [readonlyInput]="false" [showIcon]="false">
+                </p-calendar>
+            </div>
+            <div class="p-col-6 p-md-3 p-fluid">
+                <label>Recebimento</label>
+                <input pInputText type="text">
+            </div>
+            <div class="p-col-12 p-md-9 p-fluid">
+                <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
+                <p-calendar dateFormat="dd/mm/yy"></p-calendar>
+            </div>
+            <div class="p-col-12 p-md-3 p-fluid">
+                <label>Valor</label>
+                <input pInputText type="text" placeholder="0,00">
+            </div>
+            <div class="p-col-12 p-md-6 p-fluid">
+                <label>Categoria</label>
+                <p-dropdown [options]="categorias" placeholder="Selecione"
+                #categoria></p-dropdown>
+            </div>
+            <div class="p-col-12 p-md-6 p-fluid">
+                <label>Pessoa</label>
+                <p-dropdown [options]="pessoas" placeholder="Selecione"
+                [filter]="true" #pessoa></p-dropdown> 
+                <!-- com filtro de palavras -->
+            </div>
+            <div class="p-col-12 p-fluid">
+                <label>Observação</label>
+                <textarea pInputTextarea rows="3"></textarea>
+            </div>
+            <button pButton type="submit" label="Salvar"></button>
+            <button pButton type="button" label="Novo" class="p-button-info"></button>
+            <!-- <a href="javascript:;">Voltar para a pesquisa</a> -->
+        </div>
+    </div>
+</div>
