--- a/src/app/navegacao/navegacao.component.html
+++ b/src/app/navegacao/navegacao.component.html
@@ -16,8 +16,9 @@
         <li class="navbar-menuitem" ><a href="#">Deshboard</a></li>
         <!-- Pendências = lancamentos -->
         <li class="navbar-menuitem"><a routerLink="lancamentos">Pendências</a></li>
-        <li class="navbar-menuitem"><a routerLink="lancamentosCadastro">Cadastro de pendências</a></li>
-        <li class="navbar-menuitem"><a routerLink="pessoas">Pessoas</a></li>
+        <li class="navbar-menuitem"><a routerLink="lancamentosCadastro">Nova pendência</a></li>
+        <li class="navbar-menuitem"><a routerLink="pessoas">Clientes</a></li>
+        <li class="navbar-menuitem"><a routerLink="pessoasCadastro">Novo cliente</a></li>
         <!-- <li class="navbar-menuitem"><a href="#">Vendas</a></li>
         <li class="navbar-menuitem"><a href="#">Administração</a></li>
         <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
