--- a/src/app/pessoa/pessoa.component.html
+++ b/src/app/pessoa/pessoa.component.html
@@ -1,75 +1,73 @@
 <div class="container">
-    <div class="p-grid">
-        <div class="p-col-12">
-            <H1>Controle de Pessoas</H1>
-        </div>
-
-        <div class="p-col-12 p-fluid"> 
-            <label>Nome: </label>
-            <input type="text" pInputText />
-        </div>
-
-        <div class="p-col-12">
-            <button pButton type="submit" label="Pesquisar"></button>
-          </div>
+  <div class="p-grid">
+    <div class="p-col-12">
+      <H1>Controle de Clientes</H1>
     </div>
 
-
-    <div class="p-grid">
-        <div class="p-col-12">
-            <p-table  [value]="pessoas" [paginator]="true" [rows]="2">
-                <ng-template pTemplate="header">
-                    <tr>
-                      <th>Nome</th>
-                      <th>Cidade</th>
-                      <th>Estado</th>
-                      <th>Status</th>
-                      <th class="col-acoes-header"></th>
-                    </tr>
-                  </ng-template>
-
-                  <ng-template pTemplate="body" let-pessoa>
-                    <tr>
-                      <td>
-                        {{ pessoa.nome }}
-                      </td>
-                      <td>
-                        {{ pessoa.cidade }}
-                      </td>
-                      <td>
-                        {{ pessoa.estado }}
-                      </td>
-                      <td>
-                        <a href="javascript:;" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'"
-                            tooltipPosition="top">
-                          {{ pessoa.ativo ? 'Ativo' : 'Inativo' }}
-                        </a>
-                      </td>
-                      <td class="col-acoes">
-                        <span class="p-column-title"></span>
-                        <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-                        <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
-                      </td>
-                    </tr>
-                  </ng-template>
-
-                  <ng-template pTemplate="emptymessage">
-                    <tr>
-                      <td colspan="5">
-                     <h2>Nenhuma pessoa encontrada</h2>   
-                      </td>
-                    </tr>
-                  </ng-template>
-              
-            </p-table>
-        </div>
-
-        <div class="p-col-12">
-            <a pButton label="Nova Pessoa"></a>
-          </div>
-        </div>
-
+    <div class="p-col-12 p-fluid">
+      <label>Nome: </label>
+      <input type="text" pInputText />
     </div>
 
+    <div class="p-col-12">
+      <button pButton type="submit" label="Pesquisar"></button>
+    </div> <br>
 
 
+    <p-card>
+
+
+      <div class="p-grid">
+        <div class="p-col-12">
+          <p-table [value]="pessoas" [paginator]="true" [rows]="2">
+            <ng-template pTemplate="header">
+              <tr>
+                <th>Nome</th>
+                <th>Cidade</th>
+                <th>Estado</th>
+                <th>Status</th>
+                <th class="col-acoes-header"></th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-pessoa>
+              <tr>
+                <td>
+                  {{ pessoa.nome }}
+                </td>
+                <td>
+                  {{ pessoa.cidade }}
+                </td>
+                <td>
+                  {{ pessoa.estado }}
+                </td>
+                <td>
+                  <a href="javascript:;" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top">
+                    {{ pessoa.ativo ? 'Ativo' : 'Inativo' }}
+                  </a>
+                </td>
+                <td class="col-acoes">
+                  <span class="p-column-title"></span>
+                  <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+                  <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+                </td>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="emptymessage">
+              <tr>
+                <td colspan="5">
+                  <h2>Nenhuma pessoa encontrada</h2>
+                </td>
+              </tr>
+            </ng-template>
+
+          </p-table>
+        </div>
+
+        <div class="p-col-12">
+          <a pButton label="Nova Pessoa"></a>
+        </div>
+      </div>
+    </p-card>
+  </div>
