--- a/src/app/navegacao/navegacao.component.html
+++ b/src/app/navegacao/navegacao.component.html
@@ -19,12 +19,14 @@
         <li class="navbar-menuitem"><a routerLink="lancamentosCadastro">Nova pendência</a></li>
         <li class="navbar-menuitem"><a routerLink="pessoas">Clientes</a></li>
         <li class="navbar-menuitem"><a routerLink="pessoasCadastro">Novo cliente</a></li>
-        <!-- <li class="navbar-menuitem"><a href="#">Vendas</a></li>
-        <li class="navbar-menuitem"><a href="#">Administração</a></li>
+        <li class="navbar-menuitem"><a href="#">Controle de vendas</a></li>
+        <li class="navbar-menuitem"><a href="#">Nova venda</a></li>
+        <!-- <li class="navbar-menuitem"><a href="#">Administração</a></li> -->
         <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
+        <li class="navbar-menuitem"><a href="#">Novo fornecedor</a></li>
         <li class="navbar-menuitem"><a href="#">Relatórios</a></li>
         <li class="navbar-menuitem"><a href="#">Configurações</a></li>
-        <li class="navbar-menuitem"><a href="#">Suporte</a></li> -->
+        <li class="navbar-menuitem"><a href="#">Suporte</a></li>
         <li class="navbar-menuitem"><a href="#">Sair</a></li>
       </ul>
   
