--- a/src/app/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoa-cadastro/pessoa-cadastro.component.html
@@ -9,46 +9,71 @@
 
 
     <form autocomplete="off">
-        <div class="p-grid">
+        <div class="p-grid"
+        href="javascript:;" [pTooltip]="'Apenas o complemento não é obrigatório'" tooltipPosition="bottom"
+        >
       
             <div class="p-col-12 p-fluid">
-              <label>Nome</label>
-              <input pInputText type="text">
+              <label 
+              >Nome completo </label>
+              <input pInputText type="text" name="nome"
+              ngModel #nome="ngModel" required minlength="5">
             </div>
       
             <div class="p-col-12 p-md-9 p-fluid">
-              <label>Logradouro</label>
-              <input pInputText type="text">
+              <label>Logradouro </label>
+              <input pInputText type="text"
+              name="logradouro"
+              ngModel #logradouro="ngModel" required minlength="5">
+            
             </div>
       
             <div class="p-col-12 p-md-3 p-fluid">
               <label>Número</label>
-              <input pInputText type="text">
+              <input pInputText type="text"
+              name="numero"
+              ngModel #numero="ngModel" required minlength="1"
+             
+              >
             </div>
       
             <div class="p-col-12 p-md-4 p-fluid">
               <label>Complemento</label>
-              <input pInputText type="text">
+              <input pInputText type="text"
+              >
             </div>
       
             <div class="p-col-12 p-md-4 p-fluid">
               <label>Bairro</label>
-              <input pInputText type="text">
+              <input pInputText type="text"
+            
+              name="bairro"
+              ngModel #bairro="ngModel" required minlength="4"
+              >
             </div>
       
             <div class="p-col-12 p-md-4 p-fluid">
               <label>CEP</label>
-              <input pInputText type="text">
+              <p-inputMask mask="99.999-999"
+             
+              ></p-inputMask>
             </div>
       
             <div class="p-col-12 p-md-6 p-fluid">
               <label>Cidade</label>
-              <input pInputText type="text">
+              <input pInputText type="text"
+             
+              name="cidade"
+              ngModel #cidade="ngModel" required minlength="5"
+              >
             </div>
       
             <div class="p-col-12 p-md-6 p-fluid">
               <label>Estado</label>
-              <input pInputText type="text">
+              <input pInputText type="text"
+              name="estado"
+              ngModel #estado="ngModel" required minlength="5"
+              >
             </div>
       
             <div class="p-col-12">
