Detalhamento de erro ex

--- a/src/app/lancamentos-cadastro/lancamentos-cadastro.component.html
+++ b/src/app/lancamentos-cadastro/lancamentos-cadastro.component.html
@@ -1,8 +1,6 @@
 <div class="container">
 
-    <form autocomplete="off"
-    
-    >
+    <form autocomplete="off">
     <div class="p-grid"
     href="javascript:;" [pTooltip]="'Vencimento e descrição obrigatórios'" tooltipPosition="bottom">
 
@@ -37,6 +35,15 @@
                 <input pInputText type="text" name="descricao"
                   ngModel #descricao="ngModel" required minlength="5">
                
+
+                <span *ngIf="descricao.hasError('required') && descricao.dirty"
+                  class="p-message p-message-error">
+                  Informe uma descrição
+                </span>
+                <span *ngIf="descricao.hasError('minlength') && descricao.dirty"
+                  class="p-message p-message-error">
+                  Mínimo de {{ descricao.errors?.minlength.requiredLength }} caracteres. Você digitou apenas {{ descricao.errors?.minlength.actualLength }}
+                </span>
             </div>
             <div class="p-col-12 p-md-3 p-fluid">
                 <label>Valor</label>
