--- a/src/app/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoa-cadastro/pessoa-cadastro.component.html
@@ -37,7 +37,7 @@
               ngModel #logradouro="ngModel" required minlength="5">
 
 
-            <span *ngIf="nome.hasError('required') && nome.dirty"
+            <span *ngIf="logradouro.hasError('required') && logradouro.dirty"
               class="p-message p-message-error">
               Informe o logradouro.
             </span>
@@ -142,7 +142,6 @@
       
             <div class="p-col-12">
               <button pButton type="submit" label="Salvar"></button>
-              <button pButton type="button" label="Novo" class="p-button-info"></button>
               <button pButton type="button" label="Voltar" routerLink="pessoas" class="p-button-info"></button>
               <!-- <a href="javascript:;">Voltar para a pesquisa</a> -->
             </div>
