--- a/src/app/core/navegacao/navegacao.component.html
+++ b/src/app/core/navegacao/navegacao.component.html
@@ -28,13 +28,12 @@
       
         <!-- Pendências = lancamentos -->
         <li class="navbar-menuitem"><a href="#">Página inical</a></li>
-        <li class="navbar-menuitem"><a routerLink="lancamentos">Pendências</a></li>
-        <li class="navbar-menuitem"><a routerLink="lancamentosCadastro">Nova pendência</a></li>
-        <li class="navbar-menuitem"><a routerLink="pessoas">Clientes</a></li>
-        <li class="navbar-menuitem"><a routerLink="pessoasCadastro">Novo cliente</a></li>
+        <li class="navbar-menuitem"><a (click)="pendenciaLista()">Pendências</a></li>
+        <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li>
+        <li class="navbar-menuitem"><a (click)="clienteLista()">Clientes</a></li>
+        <li class="navbar-menuitem"><a  (click)="clienteCadastro()">Novo cliente</a></li>
         <li class="navbar-menuitem"><a href="#">Controle de vendas</a></li>
         <li class="navbar-menuitem"><a href="#">Nova venda</a></li>
-        <!-- <li class="navbar-menuitem"><a href="#">Administração</a></li> -->
         <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
         <li class="navbar-menuitem"><a href="#">Novo fornecedor</a></li>
         <li class="navbar-menuitem"><a href="#">Relatórios</a></li>
