Module de vendas e service de pendencias

--- a/src/app/core/navegacao/navegacao.component.html
+++ b/src/app/core/navegacao/navegacao.component.html
@@ -31,9 +31,9 @@
         <li class="navbar-menuitem"><a (click)="pendenciaLista()">Pendências</a></li>
         <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li>
         <li class="navbar-menuitem"><a (click)="clienteLista()">Clientes</a></li>
-        <li class="navbar-menuitem"><a  (click)="clienteCadastro()">Novo cliente</a></li>
-        <li class="navbar-menuitem"><a href="#">Controle de vendas</a></li>
-        <li class="navbar-menuitem"><a href="#">Nova venda</a></li>
+        <li class="navbar-menuitem"><a (click)="clienteCadastro()">Novo cliente</a></li>
+        <li class="navbar-menuitem"><a (click)="controleVenda()">Controle de vendas</a></li>
+        <li class="navbar-menuitem"><a (click)="novaVenda()">Nova venda</a></li>
         <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
         <li class="navbar-menuitem"><a href="#">Novo fornecedor</a></li>
         <li class="navbar-menuitem"><a href="#">Relatórios</a></li>
