--- a/src/app/vendas/nova-venda/nova-venda.component.html
+++ b/src/app/vendas/nova-venda/nova-venda.component.html
@@ -1,1 +1,22 @@
-<H1>NOVA VENDA</H1>
+<div class="container">
+    <H1>Nova Venda</H1>
+
+    <div class="p-col-12 p-fluid">
+        <label>Venda: </label>
+        <input type="text" pInputText />
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
