--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -14,17 +14,17 @@
     <div class="p-col-12 p-fluid"> 
         <label>Descrição: </label>
         <input  pInputText type="text" name="descricao" 
-        [(ngModel)]="descricao"/>
+        [(ngModel)]="filtro.descricao"/>
     </div>
 
     <div class="p-col-12">
         <label style="display: block">Vencimento: </label>
         <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '150px' }"
-            name="vencimentoInicio" [(ngModel)]="dataVencimentoInicio"></p-calendar>
+            name="vencimentoInicio" [(ngModel)]="filtro.dataVencimentoInicio"></p-calendar>
   
         <label> até </label>
         <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '150px' }"
-        name="vencimentoFim" [(ngModel)]="dataVencimentoFim"></p-calendar>
+        name="vencimentoFim" [(ngModel)]="filtro.dataVencimentoFim"></p-calendar>
     </div>
 
     <div class="p-col-12">
