--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -66,7 +66,8 @@
                     <td class="col-valor" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.valor }}</td>
                     <td class="col-acoes">
                         <button pButton icon="pi pi-pencil"  pTooltip="Editar" tooltipPosition="top"></button>
-                        <button pButton icon="pi pi-trash"  pTooltip="Excluir" tooltipPosition="top"></button>
+                        <button pButton icon="pi pi-trash"  pTooltip="Excluir" tooltipPosition="top"
+                        (click)="excluir(lancamento)"></button>
                     </td>
                 </tr>
             </ng-template>
