Notificação após excluir pendencia e atualização de tabela

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navegacao></app-navegacao>
 <router-outlet></router-outlet>
+
+<p-toast key="msg" position="top-right" [baseZIndex]="9999"></p-toast>
