Dialogo para excluir pendencia

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <router-outlet></router-outlet>
 
 <p-toast key="msg" position="top-right" [baseZIndex]="9999"></p-toast>
+
+<p-confirmDialog header="Confirmação" icon="pi pi-exclamation-triangle"></p-confirmDialog>
