--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -67,7 +67,7 @@
                     <td class="col-acoes">
                         <button pButton icon="pi pi-pencil"  pTooltip="Editar" tooltipPosition="top"></button>
                         <button pButton icon="pi pi-trash"  pTooltip="Excluir" tooltipPosition="top"
-                        (click)="excluir(lancamento)"></button>
+                        (click)="confirmarExclusao(lancamento)"></button>
                     </td>
                 </tr>
             </ng-template>
@@ -80,16 +80,10 @@
                 </tr>
               </ng-template>
         </p-table>
-
-  
-
     </div>
-
- 
 </div>
 
 
 
 
 </div>
-
