--- a/src/app/clientes/pessoa/pessoa.component.html
+++ b/src/app/clientes/pessoa/pessoa.component.html
@@ -49,7 +49,8 @@
                   {{ pessoa.endereco.estado }} 
                 </td>
                 <td>
-                  <a href="javascript:;" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" tooltipPosition="top">
+                  <a href="javascript:;" [pTooltip]="pessoa.ativo ? 'Desativar' : 'Ativar'" 
+                  tooltipPosition="top" (click)="status(pessoa)">
                     {{ pessoa.ativo ? 'Ativo' : 'Inativo' }}
                   </a>
                 </td>
