--- a/src/app/lancamentos/lancamento/lancamentos.component.html
+++ b/src/app/lancamentos/lancamento/lancamentos.component.html
@@ -65,7 +65,9 @@
                     <td class="col-data-content">{{ lancamento.dataPagamento }}</td>
                     <td class="col-valor" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">{{ lancamento.valor }}</td>
                     <td class="col-acoes">
-                        <button pButton icon="pi pi-pencil"  pTooltip="Editar" tooltipPosition="top"></button>
+                        <button pButton icon="pi pi-pencil"  pTooltip="Editar" tooltipPosition="top"
+                        (click)="pendenciaCadastro(lancamento.codigo)"
+                        ></button>
                         <button pButton icon="pi pi-trash"  pTooltip="Excluir" tooltipPosition="top"
                         (click)="confirmarExclusao(lancamento)"></button>
                     </td>
