--- a/src/app/clientes/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/clientes/pessoa-cadastro/pessoa-cadastro.component.html
@@ -2,7 +2,7 @@
     
     <div class="p-grid">
         <div class="p-col-12">
-            <H1>Novo cliente</H1>
+            <H1>{{ editando ? 'Edição de' : 'Novo' }} cliente</H1>
         </div>
     </div>
 <p-card>
