--- a/src/app/clientes/pessoa/pessoa.component.html
+++ b/src/app/clientes/pessoa/pessoa.component.html
@@ -56,7 +56,9 @@
                 </td>
                 <td class="col-acoes">
                   <span class="p-column-title"></span>
-                  <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"></a>
+                  <button pButton  icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"
+                  (click)="ClienteCadastro(pessoa.codigo)"></button>
+                 
                   <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
                   (click)="confirmarExclusao(pessoa)"></button>
                 </td>
