--- a/src/app/core/navegacao/navegacao.component.html
+++ b/src/app/core/navegacao/navegacao.component.html
@@ -27,7 +27,7 @@
        <!-- <li ><a >Home</a></li> -->
       
         <!-- Pendências = lancamentos -->
-        <li class="navbar-menuitem"><a href="#">Página inical</a></li>
+        <li class="navbar-menuitem"><a (click)="home()">Página inical</a></li>
         <li class="navbar-menuitem"><a (click)="pendenciaLista()">Pendências</a></li>
         <li class="navbar-menuitem"><a (click)="pendenciaCadastro()">Nova pendência</a></li>
         <li class="navbar-menuitem"><a (click)="clienteLista()">Clientes</a></li>
@@ -36,8 +36,8 @@
         <li class="navbar-menuitem"><a (click)="novaVenda()">Nova venda</a></li>
         <li class="navbar-menuitem"><a href="#">Fornecedores</a></li>
         <li class="navbar-menuitem"><a href="#">Novo fornecedor</a></li>
-        <li class="navbar-menuitem"><a href="#">Relatórios</a></li>
-        <li class="navbar-menuitem"><a href="#">Configurações</a></li>
+        <!-- <li class="navbar-menuitem"><a href="#">Relatórios</a></li> -->
+        <!-- <li class="navbar-menuitem"><a href="#">Configurações</a></li> -->
         <li class="navbar-menuitem"><a href="#">Sair</a></li>
       </ul>
   
